--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: 🚀 Feature Request
 description: Suggest an idea for this project
-title: "[Enhancement]: "
+title: "[Feature]: "
 labels: ["enhancement"]
 body:
   - type: markdown
